--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@heroicons/vue": "^2.1.5",
     "firebase": "^10.13.2",
     "pinia": "^2.1.7",
+    "uid": "^2.0.2",
+    "vee-validate": "^4.13.2",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3",
     "vuefire": "^3.2.0"
